--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "packageManager": "bun",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-label": "^2.1.6",
@@ -33,3 +38,4 @@
     "rollup": "^4.41.0"
   }
 }
+
