--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,44 @@
-.encore
-encore.gen.go
-encore.gen.cue
-/.encore
-node_modules
-/encore.gen
+# Node/Bun
+node_modules/
+bun.lock
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
+.env.*
+
+# Vite
+dist/
+frontend/dist/
+backend/frontend/dist/
+
+# Encore build
+.encre/
+
+# VS Code
+.vscode/
+
+# Docker
+*.pid
+*.sock
+docker-compose.override.yml
+
+# Logs
+logs/
+*.log
+
+# OS-generated files
+ehthumbs.db
+Icon?
+Desktop.ini
+
+# Misc
+*.swp
+*.swo
