--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
