Updated DCS Server Bot integration as well as more security and string checks for XML updates

--- a/backend/env.example
+++ b/backend/env.example
@@ -6,5 +6,9 @@ FLASK_DEBUG=False
 # Discord Webhook (optional)
 DISCORD_WEBHOOK_URL=your_discord_webhook_url_here
 
+# DCS Server Bot Integration (optional)
+DCS_BOT_ENABLED=false
+DCS_BOT_WEBHOOK_SECRET=your_webhook_secret_here
+
 # File Upload Configuration
-MAX_CONTENT_LENGTH=16777216  # 16MB in bytes 
+MAX_CONTENT_LENGTH=52428800  # 50MB in bytes 
