--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,5 @@ requests==2.31.0
 python-dotenv==1.0.0
 discord-webhook==1.3.0
 python-dateutil==2.8.2 
-Flask-Limiter>=3.4.0
+Flask-Limiter==3.5.0
 Flask-CORS>=4.0.0 
